Fix:Added div to improve contrast

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,6 +104,7 @@
 .home-page {
     min-height: 85vh;
     overflow-x: hidden;
+    
 
 }
 
@@ -121,7 +122,14 @@
     transition: filter 0.3s ease-in-out;
   }
 
-
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 /** for buttons **/
 .button-dbneats {
     color: var(--light-color);
@@ -356,7 +364,7 @@
 
 .search-container {
     z-index: 3;
-    color: var(--light-color);
+    background-color: transparent;
     min-width: 70%;
     position:fixed;
     top:45%;
@@ -364,8 +372,9 @@
 .search-container p {
     font-size: 1.75rem;
     font-weight:bold;
-    text-shadow: 0.25rem 0.25rem 0.5rem rgb(44, 62, 80);
+    text-shadow: 0.1rem 0.1rem 0.2rem rgb(44, 62, 80);
     margin-bottom: 0rem;
+    color: var(--light-color);
 }
 
 .profile-container {
